# Team_CALS_Back

./: db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py  urls.py
diet_calendars/: apps.py
dietinfo/: apps.py  models.py
diets/: admin.py  models.py  serializers.py  urls.py  views.py
diets/migrations/: 0001_initial.py  0002_diet_daily_review.py  0002_initial.py  0003_dietlist_delete_diet.py  0003_selecteddiet_food_gram_alter_dietlist_selected_diet.py  0004_alter_dietlist_selected_diet.py  0004_selecteddiet_remove_dietlist_food_calorie_and_more.py  0005_alter_dietlist_selected_diet.py  0005_dietlist_selected_diet.py  0006_alter_dietlist_meal_category.py  0007_alter_dietlist_meal_category.py  0008_alter_dietlist_meal_calorie_and_more.py  0009_alter_selecteddiet_food_calorie.py  0010_selecteddiet_food_quantity.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_activity_alter_user_age_alter_user_gender_and_more.py  0002_alter_user_email.py  0003_alter_user_activity_alter_user_age_alter_user_height_and_more.py  0003_alter_user_username.py  0003_user_activity_user_age_user_height_user_weight_and_more.py  0004_alter_user_email.py  0004_alter_user_email_alter_user_username.py  0005_alter_user_email.py  0006_alter_user_activity_alter_user_age_alter_user_height_and_more.py
